--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name : Platform Land
-brand : Platform Land
+name : The Platform Government Initiative
+brand : The Platform Government Initiative
 description : A project to explore how digital platforms will change government and society
 keyword : 
 url : https://platformland.github.io
