--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-name : The Platform Government Initiative
-brand : The Platform Government Initiative
+name : Platform land
+brand : Platform land
 description : A project to explore how digital platforms will change government and society
 keyword : 
 url : https://platformland.github.io
-email : richard_pope@hks.harvard.edu
+email : richard@richardpope.org
 twitter : 
 github : platformland
 author : Richard Pope
